# wip

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  cross_compile.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
adapters/: Cargo.toml
adapters/src/: constants.rs  lib.rs
adapters/src/auth/: auth_repository.rs  config.rs  mod.rs
adapters/src/controllers/: inpark_controllers.rs  mod.rs  park_controllers.rs  post_controllers.rs  user_controllers.rs
adapters/src/database/: mod.rs
adapters/src/database/inpark/: inpark_db_mapper.rs  inpark_model.rs  inpark_repository.rs  mod.rs
adapters/src/database/parks/: mod.rs  parks_db_mapper.rs  parks_model.rs  parks_repository.rs
adapters/src/database/posts/: mod.rs  posts_repository.rs
adapters/src/database/shared/: db_connection.rs
adapters/src/database/users/: mod.rs  users_db_mapper.rs  users_model.rs  users_repository.rs
adapters/src/dtos/: create_inpark_dto.rs  create_post_dto.rs  create_user_dto.rs  mod.rs  user_login_dto.rs
adapters/src/infrastructure/: app_state.rs  auth_extractor.rs  auth_middleware.rs  grants_extractor.rs  id_token.rs  mod.rs  routes.rs  run.rs
adapters/src/presenters/: date_presenter.rs  detailed_inpark_presenter.rs  error_presenter.rs  inpark_id_presenter.rs  mod.rs  park_presenter.rs  post_presenter.rs  user_presenter.rs
adapters/src/storage/: mod.rs
adapters/src/storage/images/: images_repository.rs  mod.rs
adapters/src/storage/shared/: storage.rs
application/: Cargo.toml
domain/: Cargo.toml
domain/src/: lib.rs
src/: main.rs
(+48 files in other folders)
